@@ -42,6 +42,9 @@ extern int fuse_emulation_paused;	/* Is Spectrum emulation paused? */
 int fuse_emulation_pause(void);		/* Stop and start emulation */
 int fuse_emulation_unpause(void);
 
+void fuse_sound_enable();		/* Start sound output */
+void fuse_sound_disable();		/* Stop sound output */
+
 void fuse_abort( void ) GCC_NORETURN;	/* Emergency shutdown */
 
 extern int fuse_sound_in_use;		/* Are we trying to produce sound? */
